turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: java.awt.Color does not take parameters
  if(c == Color.black()){
                     ^LangtonsAnt:3: error: not found: value setCouleurSol
    setCouleurSol(Color.white);baisseBrosse()leveBrosse()
    ^LangtonsAnt:3: error: value leveBrosse is not a member of Unit
    setCouleurSol(Color.white);baisseBrosse()leveBrosse()
                                             ^LangtonsAnt:7: error: not found: value setCouleurSol
    setCouleurSol(Color.black);baisseBrosse();leveBrosse()
    ^